--- a/H3_Methods.tex
+++ b/H3_Methods.tex
@@ -98,7 +98,8 @@ Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1
 
 \subsection{Smith-Waterman}
 \label{expl:SWanalyse}
-The \emph{Smith-Waterman} (S-W) algorithm was first proposed by Temple F. Smith and Michael S. Waterman in 1981. It is a variation on the N-W algorithm, adapted for local alignment. It is a dynamic programming technique, so an optimal local alignment is guaranteed. \\
+The \emph{Smith-Waterman} (S-W) algorithm was first proposed by Temple F. Smith and Michael S. Waterman in 1981  %cit
+. It is a variation on the N-W algorithm, adapted for local alignment. It is a dynamic programming technique, so an optimal local alignment is guaranteed. \\
 
 The core of the algorithm is a matrix fillup, with data dependencies on the previous cells. Hereunder an analysis of the algorithm:
 
