--- a/H4_ELbackground.tex
+++ b/H4_ELbackground.tex
@@ -71,14 +71,14 @@ A few companies have also made some implementations on FPGA in the past, e.g. Cr
 %cray: https://www.cray.com/
 %timelogics: http://www.timelogic.com/
 
-A master's thesis from 2011 by Vermij E. (university, city, country) has a detailed analysis of an FPGA based Smith-Waterman implementation. In other papers, it was found that the performance per Watt level for an FPGA implementation is better than a GPU or CPU by a factor of 12-21 times.
+A master's thesis from 2011 by Vermij E. (university, city, country) %cit
+ has a detailed analysis of an FPGA based Smith-Waterman implementation. In other papers, it was found that the performance per Watt level for an FPGA implementation is better than a GPU or CPU by a factor of 12-21 times.
 
 \section{Hardware selection}
 
 As the hardware the ZCU 104 evaluation kit was selected, which has an MPSoC onboard. An MPSoC (or \emph{Multi-Processor System on Chip}) is an integrated circuit that contains multiple microprocessors. This means that both a processor and programmable hardware is available.
 
 \begin{figure}[H]
-	%src=https://evergreen.loyola.edu/dhhoe/www/FPGA_diagram.png
 	\centering
 	\includegraphics[width=0.75\textwidth]{elBackground/hardware.jpg}
 	\caption{An overview of the hardware available on the ZCU 104 MPSoC evaluation kit}
