--- a/H4_InitialDifficulties.tex
+++ b/H4_InitialDifficulties.tex
@@ -71,8 +71,7 @@ As mentioned earlier, in this implementation we will work on a Linux distributio
 
 \subsection{Learning process on matrix multiplication example in SDSoC}
 
-To learn MPSoC and the SDSoC IDE, Xilinx' online available materials were used available at their GitHub page, which includes some hands-on assignments. The assignments use a matrix multiplication example, preinstalled with SDSoC.
-%TODO: link github page
+To learn MPSoC and the SDSoC IDE, Xilinx' online available materials were used available at their GitHub page, which includes some hands-on assignments. The assignments use a matrix multiplication example, preinstalled with SDSoC. A weblink to this GitHub page can be found in the references.%cit
 
 \paragraph{lab1: INTRODUCTION}
 \begin{itemize}
