--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -245,7 +245,8 @@ This layer must be efficiently coded, and since it runs for every cell (and ther
 
 \subsection{The IGV software}
 
-The free and easy to download program IGV (or Integrative Genomics Viewer) is a visualization tool for exploring genomic datasets. In practice, it is used to examine the results from mapped reads.
+The free and easy to download program IGV %cit
+(or Integrative Genomics Viewer) is a visualization tool for exploring genomic datasets. In practice, it is used to examine the results from mapped reads.
 
 \begin{figure}[H]
 	\centering
