--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,50 +1,146 @@
- 
-@article{einstein1935,
-  title={Can quantum-mechanical description of physical reality be considered complete?},
-  author={Einstein, Albert and Podolsky, Boris and Rosen, Nathan},
-  journal={Physical review},
-  volume={47},
-  number={10},
-  pages={777},
-  year={1935},
-  publisher={APS}
+@ARTICLE{SW, 
+	author = {T. F. Smith and M. S. Waterman},
+	title = {Identification of Common Molecular Subsequences},
+	journal = {Journal of Molecular Biology},
+	year = 1981,
+	volume = 147, 
+	pages = {195--197}
 }
 
-@article{feynman1948,
-  title={Space-time approach to non-relativistic quantum mechanics},
-  author={Feynman, Richard Phillips},
-  journal={Reviews of Modern Physics},
-  volume={20},
-  number={2},
-  pages={367},
-  year={1948},
-  publisher={APS}
+@BOOK{NIPT,
+	author = {S. Drury, M. Hill, L.S. Chitty},
+	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
+	year = 2016,
+	publisher = {Elsevier, Inc.}
 }
 
-@article{aad2012,
-  title={Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC},
-  author={Aad, Georges and Abajyan, T and Abbott, B and Abdallah, J and Khalek, S Abdel and Abdelalim, AA and Abdinov, O and Aben, R and Abi, B and Abolins, M and others},
-  journal={Physics Letters B},
-  volume={716},
-  number={1},
-  pages={1--29},
-  year={2012},
-  publisher={Elsevier}
+@INCOLLECTION{gpuImpl,
+	author = {V.N. Alexandrov, G.D. van Albada, P.M.A. Sloot, J. Dongarra},
+	title = {General Purpose Computations on Graphics hardware: methods, algorithms and applications},
+	booktitle = {Computational science - ICCS 2006 : 6th international conference, Reading, UK, May 28-31, 2006 ; proceedings},
+	year = 2006,
+	publisher = {Berlin: Springer}
 }
 
-@article{hughes2005,
-  title={Isogeometric analysis: CAD, finite elements, NURBS, exact geometry and mesh refinement},
-  author={Hughes, Thomas JR and Cottrell, John A and Bazilevs, Yuri},
-  journal={Computer methods in applied mechanics and engineering},
-  volume={194},
-  number={39},
-  pages={4135--4195},
-  year={2005},
-  publisher={Elsevier}
+@MANUAL{SAM,
+	title = {Sequence Alignment/Map Format Specification},
+	year = 2020,
+	organization = {The SAM/BAM Format Specification Working Group}
 }
-@book{cottrell2009,
-  title={Isogeometric analysis: toward integration of CAD and FEA},
-  author={Cottrell, J Austin and Hughes, Thomas JR and Bazilevs, Yuri},
-  year={2009},
-  publisher={John Wiley \& Sons}
+
+@MANUAL{sdsoc,
+	author = {R. Vergel},
+	title = {Getting started with SDSoC},
+	year = 2018,
+	note = {https://github.com/Xilinx/SDSoC-Tutorials/tree/master/getting-started-tutorial}
+	organization = {Xilinx Inc.}
 }
+
+@MASTERSTHESIS{fpgaImpl,
+	author = {Corey Bruce Olson},
+	title = {An FPGA acceleration of short read human genome mapping},
+	year = 2011,
+	school = {University of Washington}
+}
+
+@MASTERSTHESIS{Vermij,
+	author = {Erik Vermij},
+	title = {Genetic sequence alignment on a supercomputing platform},
+	year = 2011,
+	school = {Delft university of technology}
+}
+
+@MISC{pptHowest,
+	author = {Friedel Nollet},
+	title = {powerpoint: HOWEST 2019-2020 hfst1&2 Sanger&NGS},
+	year = 2019,
+}
+
+@MISC{clcbio,
+	author = {CLC Bio},
+	title = {Bioinformatics company},
+	howpublished = {https://www.cray.com/}
+}
+
+@MISC{timelogics,
+	author = {Timelogics},
+	title = {Bioinformatics company},
+	howpublished = {http://www.timelogic.com/}
+}
+
+@MISC{fpga100x,
+	author = {O.O. Storaasli, Dave Strenski},
+	title = {Accelerating Genome Sequencing 100X with FPGAs},
+	howpublished = {https://web.archive.org/web/20110720080855/http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
+}
+
+
+@MISC{IGV,
+	title = {IGV download page},
+	howpublished = {http://software.broadinstitute.org/software/igv/}
+}
+
+
+@MISC{NCBI,
+	author = {University of Washington},
+	title = {Genome of coronavirus, NCBI},
+	howpublished = {https://www.ncbi.nlm.nih.gov/sra/SRX7852918}
+}
+
+
+@MISC{mendel,
+	author = {wikimedia},
+	title = {figure: Gregor Mendel portrait},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/8/87/Gregor_Mendel_portrait.jpg}
+}
+
+
+@MISC{dna,
+	author = {wikimedia},
+	title = {figure: Double stranded DNA with coloured bases},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double_stranded_DNA_with_coloured_bases.png/1024px-Double_stranded_DNA_with_coloured_bases.png}
+}
+
+
+@MISC{dnachemical,
+	author = {wikimedia},
+	title = {figure: DNA chemical structure},
+	howpublished = {figure: DNA chemical structure}
+}
+
+
+@MISC{karyotype,
+	author = {wikimedia},
+	title = {figure: Karyotype},
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
+}
+
+
+@MISC{trisomy,
+	author = {anatomybox},
+	title = {figure: Trisomy 21 male},
+	howpublished = {http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png}
+}
+
+
+@MISC{fpgacomparison,
+	author = {microsoft},
+	title = {figure: azure machine learning fpga comparison},
+	howpublished = {https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
+}
+
+
+@MISC{sequential,
+	author = {Lighterra},
+	title = {figure: sequential working of microprocessor},
+	howpublished = {http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
+}
+
+
+@MISC{fpgaworkings,
+	author = {loyola},
+	title = {figure: FPGA diagram},
+	howpublished = {https://evergreen.loyola.edu/dhhoe/www/FPGA_diagram.png}
+}
+
+
