--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -59,7 +59,7 @@ It is important to note that in most living organisms DNA does not exist as a si
 	%src: https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double_stranded_DNA_with_coloured_bases.png/1024px-Double_stranded_DNA_with_coloured_bases.png
 	\centering
 	\includegraphics[width=0.3\linewidth]{background/DoubleHelix.png}
-	\caption{The famous double helix}
+	\caption{The famous double helix. (\cite{dna})}
 	\label{fig:doubleHelix}
 \end{figure}
 
@@ -71,7 +71,7 @@ The first phosphate group, at the start of the molecule, connects to the sugar g
 	%src: https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/DNA_chemical_structure.svg/800px-DNA_chemical_structure.svg.png
 	\centering
 	\includegraphics[width=0.5\linewidth]{background/DNAstructure.png}
-	\caption{A short part of a DNA molecule containing a $[5' - ACTG - 3']$ (left) and a complementary strand of $[3' - TGAC - 5']$ (right). These 2 strands are interconnected by hydrogen bonds}
+	\caption{A short part of a DNA molecule containing a $[5' - ACTG - 3']$ (left) and a complementary strand of $[3' - TGAC - 5']$ (right). These 2 strands are interconnected by hydrogen bonds.  (\cite{dnachemical})}
 	\label{fig:DNAstructure}
 \end{figure}
 
@@ -103,7 +103,7 @@ The 23 chromosome pairs are classified in:
 	%src: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png
 	\centering
 	\includegraphics[width=0.5\linewidth]{background/karyotype.png}
-	\caption{the 46 human chromosomes}
+	\caption{the 46 human chromosomes. (\cite{8})}
 	\label{fig:karyotype}
 \end{figure}
 
@@ -141,7 +141,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 		%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
 		\centering
 		\includegraphics[width=0.3\linewidth]{background/enzymCopying.png}
-		\caption{the enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases.}
+		\caption{the enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases.\cite{fpgaImpl}}
 		\label{fig:enzymCopying}
 	\end{figure}
 	
@@ -157,7 +157,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 			%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
 			\centering
 			\includegraphics[width=0.5\linewidth]{background/NGS.png}
-			\caption{Sequencing technology used by Illumina attaches a nucleotide with a fluorescent tag to the next base in the read, then it captures a picture to determine the base, and removes the fluorescent tag so a new nucleotide group can bind in the next iteration.}
+			\caption{Sequencing technology used by Illumina attaches a nucleotide with a fluorescent tag to the next base in the read, then it captures a picture to determine the base, and removes the fluorescent tag so a new nucleotide group can bind in the next iteration.\cite{fpgaImpl}}
 			\label{fig:NGS}
 		\end{figure}
 	\end{enumerate}
@@ -168,7 +168,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 		%src: PPT van Howest
 		\centering
 		\includegraphics[angle= -90, width=\linewidth]{background/ImProc.png}
-		\caption{From left to right is the pictures taken at each iteration in the flowcell. The color at that specific spot marks which nucleotide has been bound. With the use of some image processing techniques the exact sequence in that spot can be identified.}
+		\caption{From left to right is the pictures taken at each iteration in the flowcell. The color at that specific spot marks which nucleotide has been bound. With the use of some image processing techniques the exact sequence in that spot can be identified.\cite{pptHowest}}
 		\label{fig:ImProc}
 	\end{figure}
 	
