--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -15,7 +15,7 @@
 }
 
 @INCOLLECTION{gpuImpl,
-	author = {V.N. Alexandrov, G.D. van Albada, P.M.A. Sloot, J. Dongarra},
+	author = {V.N. Alexandrov},
 	title = {General Purpose Computations on Graphics hardware: methods, algorithms and applications},
 	booktitle = {Computational science - ICCS 2006 : 6th international conference, Reading, UK, May 28-31, 2006 ; proceedings},
 	year = 2006,
@@ -32,7 +32,7 @@
 	author = {R. Vergel},
 	title = {Getting started with SDSoC},
 	year = 2018,
-	note = {https://github.com/Xilinx/SDSoC-Tutorials/tree/master/getting-started-tutorial}
+	note = {\newline https://github.com/Xilinx/SDSoC-Tutorials/tree/master/getting-started-tutorial},
 	organization = {Xilinx Inc.}
 }
 
@@ -52,95 +52,105 @@
 
 @MISC{pptHowest,
 	author = {Friedel Nollet},
-	title = {powerpoint: HOWEST 2019-2020 hfst1&2 Sanger&NGS},
+	title = {powerpoint: HOWEST 2019-2020 Sanger and NGS},
 	year = 2019,
 }
 
-@MISC{clcbio,
-	author = {CLC Bio},
+@MISC{1,
+	organization = {CLCbio},
+	title = {Bioinformatics company},
+	howpublished = {http://www.clccell.com/download.html}
+}
+
+@MISC{2,
+	organization = {Cray Inc.},
 	title = {Bioinformatics company},
 	howpublished = {https://www.cray.com/}
 }
 
-@MISC{timelogics,
-	author = {Timelogics},
+@MISC{3,
+	organization = {Timelogics},
 	title = {Bioinformatics company},
 	howpublished = {http://www.timelogic.com/}
 }
 
 @MISC{fpga100x,
-	author = {O.O. Storaasli, Dave Strenski},
+	author = {O.O. Storaasli, D. Strenski},
+	year = 2011,
 	title = {Accelerating Genome Sequencing 100X with FPGAs},
-	howpublished = {https://web.archive.org/web/20110720080855/http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
+	howpublished = {\newline http://ft.ornl.gov/~olaf/pubs/RSSIOlafDave.pdf}
 }
 
 
-@MISC{IGV,
+@MISC{12,
 	title = {IGV download page},
-	howpublished = {http://software.broadinstitute.org/software/igv/}
+	howpublished = {\newline http://software.broadinstitute.org/software/igv/}
 }
 
 
-@MISC{NCBI,
-	author = {University of Washington},
+@MISC{11,
+	organization = {University of Washington},
 	title = {Genome of coronavirus, NCBI},
 	howpublished = {https://www.ncbi.nlm.nih.gov/sra/SRX7852918}
 }
 
 
 @MISC{mendel,
-	author = {wikimedia},
+	organization = {wikimedia},
 	title = {figure: Gregor Mendel portrait},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/8/87/Gregor_Mendel_portrait.jpg}
+	howpublished = {https://upload.wikimedia.org/wikipedia/commons/8/87/Gregor\_Mendel\_portrait.jpg}
 }
 
 
 @MISC{dna,
-	author = {wikimedia},
+	organization = {wikimedia},
 	title = {figure: Double stranded DNA with coloured bases},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double_stranded_DNA_with_coloured_bases.png/1024px-Double_stranded_DNA_with_coloured_bases.png}
+	howpublished = {\newline https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Double\_stranded\_DNA\_with\_coloured\_bases.png/1024px-Double\_stranded\_DNA\_with\_coloured\_bases.png}
 }
 
 
 @MISC{dnachemical,
-	author = {wikimedia},
+	organization = {wikimedia},
 	title = {figure: DNA chemical structure},
 	howpublished = {figure: DNA chemical structure}
 }
 
 
-@MISC{karyotype,
-	author = {wikimedia},
+@MISC{8,
+	organization = {wikimedia},
 	title = {figure: Karyotype},
-	howpublished = {https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
+	howpublished = {\newline https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png}
 }
 
 
-@MISC{trisomy,
-	author = {anatomybox},
+@MISC{10,
+	organization = {anatomybox},
 	title = {figure: Trisomy 21 male},
-	howpublished = {http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png}
+	howpublished = {\newline http://www.anatomybox.com/wp-content/uploads/2011/07/Trisomy-21-male.png}
 }
 
 
 @MISC{fpgacomparison,
-	author = {microsoft},
+	organization = {Microsoft},
 	title = {figure: azure machine learning fpga comparison},
-	howpublished = {https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
+	howpublished = {\newline https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
 }
 
 
-@MISC{sequential,
-	author = {Lighterra},
+@MISC{9,
+	organization = {Lighterra},
 	title = {figure: sequential working of microprocessor},
-	howpublished = {http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
+	howpublished = {\newline http://www.lighterra.com/papers/modernmicroprocessors/sequential2.png}
 }
 
+@MISC{13,
+	organization = {Galaxy.org},
+	title = {Online bioinformatics tools},
+	howpublished = {\newline https://usegalaxy.org/}
+}
 
 @MISC{fpgaworkings,
-	author = {loyola},
-	title = {figure: FPGA diagram},
-	howpublished = {https://evergreen.loyola.edu/dhhoe/www/FPGA_diagram.png}
+	organization = {loyola},
+	title = {figure: fpga diagram},
+	howpublished = {https://evergreen.loyola.edu/dhhoe/www/FPGA\_diagram.png}
 }
-
-
