--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,7 @@
 \usepackage{graphicx}
 \usepackage[latin1]{inputenc}           % om niet ascii karakters rechtstreeks te kunnen inputten
 %\usepackage[utf8]{inputenc}            % commentarieer deze regel uit als je utf8 encoded files gebruikt in plaats van latin1
-\usepackage{natbib}
+\usepackage[numbers]{natbib}
 \usepackage{listings}             		% voor het weergeven van broncode
 \usepackage{verbatim}					% weergeven van code, commando's, ...
 \usepackage{hyperref}					% maak PDF van de thesis navigeerbaar
@@ -155,7 +155,7 @@
 % Bibliografie: referenties. De items zitten in bibliografie.bib
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Indien je ook de niet geciteerde werken in je bibliografie wil opnemen, commentarieer dan onderstaande regel uit!
-% \nocite{*}
+%\nocite{*}
 \bibliographystyle{apalike}
 \bibliography{bibliografie}
 
