--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -127,6 +127,7 @@ Mark, the read itself is also stored in this type since all the information in t
 \end{figure}
 
 \subsubsection{Code structure}
+\label{codeStructure}
 
 First of all, the representation of the bases in the files (which is in the ASCII character format) should be transformable to the BASE type in the program. Because of this, conversion functions were created to change the character to base or vice versa.
 
